Fixes things and makes more better.

--- a/sass/_font_family.scss
+++ b/sass/_font_family.scss
@@ -2,6 +2,8 @@
    FONT FAMILY
 */
 
+body, html {   font-family: avenir, 'avenir next', helvetica, arial, sans-serif; }
+
 .serif {        font-family: georgia, serif; }
 .sans-serif {   font-family: avenir, 'avenir next', helvetica, arial, sans-serif; }
 .font-fantasy { font-family: fantasy; }
