--- a/sass/_font_variant.scss
+++ b/sass/_font_variant.scss
@@ -3,6 +3,5 @@
 */
 
 .fv-norm    { font-variant: normal; }
-.fv-sc,
-.small-caps { font-variant: small-caps; }
+.fv-sc      { font-variant: small-caps; }
 .fv-i       { font-variant: inherit; }
