Updates with new styles. More things. Bigger files. More.

--- a/sass/_animation_delay.scss
+++ b/sass/_animation_delay.scss
@@ -2,11 +2,13 @@
    ANIMATION DELAY
 */
 
+  .a-delay-0 { animation-delay: 0; }
   .a-delay-1 { animation-delay: .5s; }
   .a-delay-2 { animation-delay: 1s; }
   .a-delay-3 { animation-delay: 2s; }
   .a-delay-4 { animation-delay: 4s; }
   .a-delay-5 { animation-delay: 8s; }
   .a-delay-6 { animation-delay: 16s; }
-
+  .a-delay-7 { animation-delay: 32s; }
+  .a-delay-8 { animation-delay: 64s; }
 
