--- a/sass/_background_size.scss
+++ b/sass/_background_size.scss
@@ -8,4 +8,5 @@
   .bg-half {            background-size: 50%; }
   .bg-three-quarters {  background-size: 75%; }
   .bg-full {            background-size: 100%; }
+  .bg-double {          background-size: 200%; }
   .bg-auto {            background-size: auto; }
