--- a/sass/_borders.scss
+++ b/sass/_borders.scss
@@ -7,3 +7,51 @@
   .br { border-right-style: solid;      border-right-width: 1px; }
   .bb { border-bottom-style: solid;     border-bottom-width: 1px; }
   .bl { border-left-style: solid;       border-left-width: 1px; }
+
+  .bad { border-style: dashed;            border-width: 1px; }
+  .btd { border-left-style: dashed;       border-left-width: 1px; }
+  .brd { border-right-style: dashed;      border-right-width: 1px; }
+  .bbd { border-bottom-style: dashed;     border-bottom-width: 1px; }
+  .bld { border-left-style: dashed;       border-left-width: 1px; }
+
+  .bado { border-style: dotted;            border-width: 1px; }
+  .btdo { border-left-style: dotted;       border-left-width: 1px; }
+  .brdo { border-right-style: dotted;      border-right-width: 1px; }
+  .bbdo { border-bottom-style: dotted;     border-bottom-width: 1px; }
+  .bldo { border-left-style: dotted;       border-left-width: 1px; }
+
+  .badu { border-style: double;            border-width: 1px; }
+  .btdu { border-left-style: double;       border-left-width: 1px; }
+  .brdu { border-right-style: double;      border-right-width: 1px; }
+  .bbdu { border-bottom-style: double;     border-bottom-width: 1px; }
+  .bldu { border-left-style: double;       border-left-width: 1px; }
+
+  .bar { border-style: ridge;            border-width: 1px; }
+  .btr { border-left-style: ridge;       border-left-width: 1px; }
+  .brr { border-right-style: ridge;      border-right-width: 1px; }
+  .bbr { border-bottom-style: ridge;     border-bottom-width: 1px; }
+  .blr { border-left-style: ridge;       border-left-width: 1px; }
+
+  .bai { border-style: inset;            border-width: 1px; }
+  .bti { border-left-style: inset;       border-left-width: 1px; }
+  .bri { border-right-style: inset;      border-right-width: 1px; }
+  .bbi { border-bottom-style: inset;     border-bottom-width: 1px; }
+  .bli { border-left-style: inset;       border-left-width: 1px; }
+
+  .bao { border-style: outset;            border-width: 1px; }
+  .bto { border-left-style: outset;       border-left-width: 1px; }
+  .bro { border-right-style: outset;      border-right-width: 1px; }
+  .bbo { border-bottom-style: outset;     border-bottom-width: 1px; }
+  .blo { border-left-style: outset;       border-left-width: 1px; }
+
+  .bag { border-style: groove;            border-width: 1px; }
+  .btg { border-left-style: groove;       border-left-width: 1px; }
+  .brg { border-right-style: groove;      border-right-width: 1px; }
+  .bbg { border-bottom-style: groove;     border-bottom-width: 1px; }
+  .blg { border-left-style: groove;       border-left-width: 1px; }
+
+  .bah { border-style: hidden;            border-width: 1px; }
+  .bth { border-left-style: hidden;       border-left-width: 1px; }
+  .brh { border-right-style: hidden;      border-right-width: 1px; }
+  .bbh { border-bottom-style: hidden;     border-bottom-width: 1px; }
+  .blh { border-left-style: hidden;       border-left-width: 1px; }
