--- a/sass/_outlines.scss
+++ b/sass/_outlines.scss
@@ -2,16 +2,147 @@
   OUTLINES
 */
 
-.oo--blk {      outline-color: $near-black; }
-.oo--dk-gry {   outline-color: $dark-gray; }
-.oo--md-gry {   outline-color: $mid-gray; }
-.oo--gray {     outline-color: $gray; }
-.oo--silver  {  outline-color: $silver; }
-.oo--lt-slvr {  outline-color: $light-silver; }
-.oo--lt-gry {   outline-color: $light-gray; }
-.oo--near-wht { outline-color: $near-white; }
-.oo--wht {      outline-color: $white; }
 
+.oo--near-black { outline-color: $near-black; }
+.oo--dark-gray { outline-color: $dark-gray; }
+.oo--mid-gray { outline-color: $mid-gray; }
+.oo--gray { outline-color: $gray; }
+.oo--silver { outline-color: $silver; }
+.oo--light-silver { outline-color: $light-silver; }
+.oo--light-gray { outline-color: $light-gray; }
+.oo--near-white { outline-color: $near-white; }
+.oo--white { outline-color: $white; }
+.oo--pink { outline-color: $pink; }
+.oo--lightpink { outline-color: $lightpink; }
+.oo--hotpink { outline-color: $hotpink; }
+.oo--deeppink { outline-color: $deeppink; }
+.oo--palevioletred { outline-color: $palevioletred; }
+.oo--mediumvioletred { outline-color: $mediumvioletred; }
+.oo--lightsalmon { outline-color: $lightsalmon; }
+.oo--salmon { outline-color: $salmon; }
+.oo--darksalmon { outline-color: $darksalmon; }
+.oo--lightcoral { outline-color: $lightcoral; }
+.oo--indianred { outline-color: $indianred; }
+.oo--crimson { outline-color: $crimson; }
+.oo--firebrick { outline-color: $firebrick; }
+.oo--darkred { outline-color: $darkred; }
+.oo--red { outline-color: $red; }
+.oo--orangered { outline-color: $orangered; }
+.oo--tomato { outline-color: $tomato; }
+.oo--coral { outline-color: $coral; }
+.oo--darkorange { outline-color: $darkorange; }
+.oo--orange { outline-color: $orange; }
+.oo--gold { outline-color: $gold; }
+.oo--yellow { outline-color: $yellow; }
+.oo--lightyellow { outline-color: $lightyellow; }
+.oo--lemonchiffon { outline-color: $lemonchiffon; }
+.oo--lightgoldenrodyellow { outline-color: $lightgoldenrodyellow; }
+.oo--papayawhip { outline-color: $papayawhip; }
+.oo--moccasin { outline-color: $moccasin; }
+.oo--peachpuff { outline-color: $peachpuff; }
+.oo--palegoldenrod { outline-color: $palegoldenrod; }
+.oo--khaki { outline-color: $khaki; }
+.oo--darkkhaki { outline-color: $darkkhaki; }
+.oo--cornsilk { outline-color: $cornsilk; }
+.oo--blanchedalmond { outline-color: $blanchedalmond; }
+.oo--bisque { outline-color: $bisque; }
+.oo--navajowhite { outline-color: $navajowhite; }
+.oo--wheat { outline-color: $wheat; }
+.oo--burlywood { outline-color: $burlywood; }
+.oo--tan { outline-color: $tan; }
+.oo--rosybrown { outline-color: $rosybrown; }
+.oo--sandybrown { outline-color: $sandybrown; }
+.oo--goldenrod { outline-color: $goldenrod; }
+.oo--darkgoldenrod { outline-color: $darkgoldenrod; }
+.oo--peru { outline-color: $peru; }
+.oo--chocolate { outline-color: $chocolate; }
+.oo--saddlebrown { outline-color: $saddlebrown; }
+.oo--sienna { outline-color: $sienna; }
+.oo--brown { outline-color: $brown; }
+.oo--maroon { outline-color: $maroon; }
+.oo--darkolivegreen { outline-color: $darkolivegreen; }
+.oo--olive { outline-color: $olive; }
+.oo--olivedrab { outline-color: $olivedrab; }
+.oo--yellowgreen { outline-color: $yellowgreen; }
+.oo--limegreen { outline-color: $limegreen; }
+.oo--lime { outline-color: $lime; }
+.oo--lawngreen { outline-color: $lawngreen; }
+.oo--chartreuse { outline-color: $chartreuse; }
+.oo--greenyellow { outline-color: $greenyellow; }
+.oo--springgreen { outline-color: $springgreen; }
+.oo--mediumspringgreen { outline-color: $mediumspringgreen; }
+.oo--lightgreen { outline-color: $lightgreen; }
+.oo--palegreen { outline-color: $palegreen; }
+.oo--darkseagreen { outline-color: $darkseagreen; }
+.oo--mediumseagreen { outline-color: $mediumseagreen; }
+.oo--seagreen { outline-color: $seagreen; }
+.oo--forestgreen { outline-color: $forestgreen; }
+.oo--green { outline-color: $green; }
+.oo--darkgreen { outline-color: $darkgreen; }
+.oo--mediumaquamarine { outline-color: $mediumaquamarine; }
+.oo--aqua { outline-color: $aqua; }
+.oo--cyan { outline-color: $cyan; }
+.oo--lightcyan { outline-color: $lightcyan; }
+.oo--paleturquoise { outline-color: $paleturquoise; }
+.oo--aquamarine { outline-color: $aquamarine; }
+.oo--turquoise { outline-color: $turquoise; }
+.oo--mediumturquoise { outline-color: $mediumturquoise; }
+.oo--darkturquoise { outline-color: $darkturquoise; }
+.oo--lightseagreen { outline-color: $lightseagreen; }
+.oo--cadetblue { outline-color: $cadetblue; }
+.oo--darkcyan { outline-color: $darkcyan; }
+.oo--teal { outline-color: $teal; }
+.oo--lightsteelblue { outline-color: $lightsteelblue; }
+.oo--powderblue { outline-color: $powderblue; }
+.oo--lightblue { outline-color: $lightblue; }
+.oo--skyblue { outline-color: $skyblue; }
+.oo--lightskyblue { outline-color: $lightskyblue; }
+.oo--deepskyblue { outline-color: $deepskyblue; }
+.oo--dodgerblue { outline-color: $dodgerblue; }
+.oo--cornflowerblue { outline-color: $cornflowerblue; }
+.oo--steelblue { outline-color: $steelblue; }
+.oo--royalblue { outline-color: $royalblue; }
+.oo--blue { outline-color: $blue; }
+.oo--mediumblue { outline-color: $mediumblue; }
+.oo--darkblue { outline-color: $darkblue; }
+.oo--navy { outline-color: $navy; }
+.oo--midnightblue { outline-color: $midnightblue; }
+.oo--lavender { outline-color: $lavender; }
+.oo--thistle { outline-color: $thistle; }
+.oo--plum { outline-color: $plum; }
+.oo--violet { outline-color: $violet; }
+.oo--orchid { outline-color: $orchid; }
+.oo--fuchsia { outline-color: $fuchsia; }
+.oo--magenta { outline-color: $magenta; }
+.oo--mediumorchid { outline-color: $mediumorchid; }
+.oo--mediumpurple { outline-color: $mediumpurple; }
+.oo--blueviolet { outline-color: $blueviolet; }
+.oo--darkviolet { outline-color: $darkviolet; }
+.oo--darkorchid { outline-color: $darkorchid; }
+.oo--darkmagenta { outline-color: $darkmagenta; }
+.oo--purple { outline-color: $purple; }
+.oo--indigo { outline-color: $indigo; }
+.oo--darkslateblue { outline-color: $darkslateblue; }
+.oo--slateblue { outline-color: $slateblue; }
+.oo--mediumslateblue { outline-color: $mediumslateblue; }
+.oo--white { outline-color: $white; }
+.oo--snow { outline-color: $snow; }
+.oo--honeydew { outline-color: $honeydew; }
+.oo--mintcream { outline-color: $mintcream; }
+.oo--azure { outline-color: $azure; }
+.oo--aliceblue { outline-color: $aliceblue; }
+.oo--ghostwhite { outline-color: $ghostwhite; }
+.oo--whitesmoke { outline-color: $whitesmoke; }
+.oo--seashell { outline-color: $seashell; }
+.oo--beige { outline-color: $beige; }
+.oo--oldlace { outline-color: $oldlace; }
+.oo--floralwhite { outline-color: $floralwhite; }
+.oo--ivory { outline-color: $ivory; }
+.oo--antiquewhite { outline-color: $antiquewhite; }
+.oo--linen { outline-color: $linen; }
+.oo--lavenderblush { outline-color: $lavenderblush; }
+.oo--mistyrose { outline-color: $mistyrose; }
+.oo--gainsboro { outline-color: $gainsboro; }
 
 /* Outline Styles */
 
