Remove css comments in favor of sass comments in some areas. Updating z-index to have even more values.

--- a/sass/unabridged.scss
+++ b/sass/unabridged.scss
@@ -5,13 +5,12 @@
  * @mrmrs
  */
 
-/* Variables and Mixins */
+// Variables and Mixins
 
 @import "colors";
 @import "queries";
 
-/* SCSS/CSS */
-
+// The CSS
 @import "animation_delay";
 @import "animation_directions";
 @import "animation_duration";
